# virtual-filesystem-cpp

./: CMakeLists.txt  README.md
include/: Directory.hpp  File.hpp  Node.hpp  Path.hpp  Serializer.hpp  Utils.hpp  VFS.hpp
src/: CMakeLists.txt  Directory.cpp  File.cpp  Node.cpp  Path.cpp  Serializer.cpp  Utils.cpp  VFS.cpp  main.cpp
tests/: CMakeLists.txt  test_path.cpp  test_serialization.cpp  test_vfs.cpp
